--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -45,7 +45,7 @@
 
     <script>
         // Check that service workers are supported
-        if (process.env.NODE_ENV === 'production' && 'serviceWorker' in navigator) {
+        if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js');
